index html updated

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Our solution operates on a parallel private radio network, eliminating the need 
       <a href="https://aemaco.com/">AEMACO</a>
     </div>
     <div class="project">
-      <h3>E-commerce Application</h3>
+      <h3>PROMS</h3>
       <p>PRoMS allows companies to create applications for Pepper and Temi robot without any coding experience and increase robot utilization by using key features, like voice communication, gestures, and tablet. 
         Pepper CMS is part of the Robotics CMS utilizing its core features and adding unique capabilities. The following is a detailed guide to show you how to install and interact with PRoMS easily. Before proceeding with the following steps, kindly ensure that the 
         application is installed either via APK file or Softbank Command Center..
